--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+.header{
+  background-color:blue;
+}
+.unique{
+  background-color: blue;
+  color: black;
+  padding: 5px;
+}
